--- a/main.html
+++ b/main.html
@@ -7,6 +7,17 @@
 </head>
 
 <body>
+	<form>
+		<label>First Name:</label>
+		<input type="text" id="name" name="name"/><br>
+		<label for="lastname">Last Name:</label>
+		<input type="text" id="lastname" name="lastname"/><br>
+		<label for="tel">Phone Number:</label>
+		<input type="tel" id="tel" name="tel"/><br>
+		<label for="email">Email ID:</label>
+		<input type="email" id="email" name="email"/><br>
+		<button type="submit">Submit</button>
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
