--- a/main.html
+++ b/main.html
@@ -8,21 +8,16 @@
 
 <body>
 	<form>
-	  <label for="firstname">First Name: </label>
-	  <input type="text" id="firstname" name="firstname"/><br>
-	
-	  <label for="lastname">Last Name: </label>
-	  <input type="text" id="lastname" name="lastname"/><br>
-	
-	  <label for="tel">Phone Number: </label>
-	  <input type="tel" id="tel" name="tel"/><br>
-	
-	  <label for="email">Email ID: </label>
-	  <input type="email" id="email" name="email"/><br>
-	
-	  <button type="submit">Submit</button>
+		<label for="First Name">First Name: </label>
+		<input type="text" id="name" name="First Name"/><br>
+		<label for="Last Name">Last Name: </label>
+		<input type="text" id="lastname" name="Last Name"/><br>
+		<label for="Phone Number">Phone Number: </label>
+		<input type="tel" id="tel" name="Phone Number"/><br>
+		<label for="Email Id">Email ID: </label>
+		<input type="email" id="email" name="Email ID"/><br>
+		<button type="submit">Submit</button>
 	</form>
-
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
