--- a/main.html
+++ b/main.html
@@ -8,16 +8,21 @@
 
 <body>
 	<form>
-		<label for="First Name">First Name: </label>
-		<input type="text" id="name" name="First Name"/><br>
-		<label for="Last Name">Last Name: </label>
-		<input type="text" id="lastname" name="Last Name"/><br>
-		<label for="Phone Number">Phone Number: </label>
-		<input type="tel" id="tel" name="Phone Number"/><br>
-		<label for="Email Id">Email ID: </label>
-		<input type="email" id="email" name="Email ID"/><br>
-		<button type="submit">Submit</button>
+	  <label for="first-name">First Name: </label>
+	  <input type="text" id="first-name" name="First Name" /><br>
+	
+	  <label for="last-name">Last Name: </label>
+	  <input type="text" id="last-name" name="Last Name" /><br>
+	
+	  <label for="phone">Phone Number: </label>
+	  <input type="tel" id="phone" name="Phone Number" /><br>
+	
+	  <label for="email">Email ID: </label>
+	  <input type="email" id="email" name="Email ID" /><br>
+	
+	  <button type="submit">Submit</button>
 	</form>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
